--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 public/ filter=lfs diff=lfs merge=lfs -text
+public/.gltf/Coffee_Shop.glb filter=lfs diff=lfs merge=lfs -text
+public/.gltf/Coffee_Shop-transformed.glb filter=lfs diff=lfs merge=lfs -text
